[package]
name = "panda-dex-dumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-maps = "0.3"
nix = "0.18"
clap = { version = "4.0", features = ["derive"] }
regex = "1.5.0"
hex = "0.4.3"
byteorder = "1.4.3"

[profile.release]
strip = true